--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,8 +36,6 @@ dist.jlink.output=${dist.jlink.dir}/DA1_SP24
 endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\LAPTOP24H\\Desktop\\jcalendar\\lib\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-1=C:\\Users\\pc\\Desktop\\New folder\\jcalendar\\lib\\jcalendar-1.4.jar
-file.reference.mssql-jdbc-10.2.1.jre17.jar=D:\\mssql-jdbc-10.2.1.jre17.jar
 file.reference.mssql-jdbc-11.2.0.jre17.jar=C:\\Users\\LAPTOP24H\\Desktop\\Git\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.0.jre17.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -45,9 +43,7 @@ jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.mssql-jdbc-11.2.0.jre17.jar}:\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.jcalendar-1.4.jar-1}:\
-    ${file.reference.mssql-jdbc-10.2.1.jre17.jar}
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -92,7 +88,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=img.DA1_SP24
+main.class=application.DA1_SP24
 # Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
 manifest.custom.application.library.allowable.codebase=
 # Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
