--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -47,7 +47,9 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-<<<<<<< HEAD
+    <<<<<<< HEAD:\
+    ${file.reference.jcalendar-1.4.jar-2}:\
+    ${file.reference.mssql-jdbc-11.2.0.jre17.jar-1}
     ${file.reference.mssql-jdbc-11.2.0.jre17.jar-1}:\
     ${file.reference.jcalendar-1.4.jar-2}
 =======
