--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,6 +38,7 @@ excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\LAPTOP24H\\Desktop\\jcalendar\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=D:\\MonDaHoc\\Ki III\\Java3\\sqljdbc_11.2\\jcalendar\\lib\\jcalendar-1.4.jar
 file.reference.mssql-jdbc-11.2.0.jre17.jar=C:\\Users\\LAPTOP24H\\Desktop\\Git\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.0.jre17.jar
+file.reference.mssql-jdbc-11.2.0.jre17.jar-1=D:\\MonDaHoc\\Ki III\\Java3\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.0.jre17.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -45,7 +46,8 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.mssql-jdbc-11.2.0.jre17.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.jcalendar-1.4.jar-1}
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.mssql-jdbc-11.2.0.jre17.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
